# books-translator

./: .bootstrap.sh  .gitignore  README.md  README_zh-CN.md  package.json  package.oo.yaml  project.oo.json  pyproject.toml  requirements.txt  test.py  workspace.oo.yaml
.github/workflows/: build.yml
.oomol/: .storage.json
blocks/python_lib_f2bb66/: block.oo.yaml  index.py
blocks/python_lib_f2bb66/logic/: group.py
flows/default/: .flow.ui.oo.json  flow.oo.yaml
flows/playground/: .flow.ui.oo.json  flow.oo.yaml
flows/translate/: .flow.ui.oo.json  flow.oo.yaml
flows/translate_srt/: .flow.ui.oo.json  flow.oo.yaml
flows/translate_srt/scriptlets/: +python#1.py
graphs/main/: flow.oo.yaml
graphs/translate/: flow.oo.yaml  flow.yaml
graphs/translate/blocks/code-0/: code-0.oo.yaml  (+2 more)
oo-locales/: en.json  zh-CN.json
shared/epub/: __init__.py  content_parser.py  epub_handler.py  group.py  paragraph_sliter.py  text_picker.py  utils.py
shared/epub/html/: dom_operator.py  file.py  texts_searcher.py
shared/language/: __init__.py
shared/transalter/: __init__.py  llm.py  translater.py
shared/translater/: group.py  llm.py  translater.py
tasks/translater/: __init__.py  cache.py  ctx_tqdm.py  file.py  llm_parser.py  main.py  progress.py  task.oo.yaml
tasks/translater/epub/: __init__.py  content_parser.py  epub_handler.py  group.py  text_picker.py  translator.py
tasks/translater/tests/: test_text_picker.py
tasks/translater/transalter/: __init__.py  llm.py
tasks/translator/: __init__.py  task.oo.yaml
tests/: test_paragraph_sliter.py  test_text_picker.py
(+9 files in other folders)
