[project]
name = "books-translater"
version = "0.0.1"
description = "Translate the epub book using LLM. The translated book will retain the original text and list the translated text side by side with the original text."
authors = [
    {name = "TaoZeyu",email = "i@taozeyu.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "epub-translator (==0.0.5)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
